main/default/objects/Almond_Settings__c/Almond_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used by the almond app</description>
    <label>Almond Settings</label>
</CustomObject>