main/default/objects/Almond_Settings__c/fields/Back_to_SF_URL__c.field-meta.xml
<CustomField>
    <fullName>Back_to_SF_URL__c</fullName>
    <description>URL used by the back to SF button</description>
    <inlineHelpText>Must be a relative url path (e.g. /home/home.jsp)</inlineHelpText>
    <label>Back to SF URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>