main/default/objects/Almond_Settings__c/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <description>URL for your company logo</description>
    <inlineHelpText>URL for your company logo</inlineHelpText>
    <label>Company Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>