main/default/objects/Almond_Settings__c/fields/Custom_Section_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_Section_URL__c</fullName>
    <description>URL path for your custom page</description>
    <inlineHelpText>URL for your custom page (e.g. https://instance.salesforce.com/apex/myhomepage)</inlineHelpText>
    <label>Custom Section URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>