main/default/objects/Almond_Settings__c/fields/Disable_Correct_Response_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Disable_Correct_Response_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like to disable setting the correct response checkbox on every response</inlineHelpText>
    <label>Disable Correct Response Checkbox</label>
    <type>Checkbox</type>
</CustomField>