main/default/objects/Almond_Settings__c/fields/Header_Text_Hover_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Text_Hover_Color__c</fullName>
    <description>HEX value for the header text hover color. (e.g. #EEEEEE)</description>
    <inlineHelpText>HEX value for the header text hover color. (e.g. #EEEEEE)</inlineHelpText>
    <label>Header Text Hover Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>