main/default/objects/Almond_Settings__c/fields/Hide_Back_to_SF_Button__c.field-meta.xml
<CustomField>
    <fullName>Hide_Back_to_SF_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you&apos;d like to hide back to SF button when the SF header is disabled</inlineHelpText>
    <label>Hide Back to SF Button</label>
    <type>Checkbox</type>
</CustomField>