main/default/objects/Almond_Settings__c/fields/Show_Salesforce_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Salesforce_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to show the Salesforce header for the end-user training pages</inlineHelpText>
    <label>Show Salesforce Header</label>
    <type>Checkbox</type>
</CustomField>